# software-factory-blueprint

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md
docs/: CMakeLists.txt  aspell.en.pws  check_spelling.sh  conf.py.in  index.rst  index.trst  spelling_wordlist.txt  swf-substitutions.txt
docs/articles/architecture/: arch-concepts.rst  arch-glossary.rst  arch-intro.rst  arch-layers.rst  arch-template.rst  arch-vertical-configurations.rst  index.rst  vert-config-SOTA.rst
docs/articles/baseplatform/: booting-qemu-image.rst  changing-bootsplash.rst  creating-a-new-layer.rst  creating-sdk.rst  deploying-image.rst  index.trst  measuring-startup-performance-with-systemd-analyze.rst  prerequisites.rst  repo-manifests.rst  reproducible-yocto-builds.rst  running-qemu-tests.rst  using-the-repo-tool.rst  variant-concept-in-yocto.rst  writing-image.rst
docs/articles/intro/: create-a-swf-deployment.rst  create-an-initial-index.rst  how-to-use-the-swf-platform-blueprint.rst  index.rst  structure-and-nomenclature.rst  swf-blueprint-introduction.rst
docs/articles/licensing/: index.rst
docs/articles/sde/: how-to-cross-compile-using-qtcreator-in-sde.rst  how-to-use-dev-image.rst  introduction_to_sde.rst
docs/articles/sdk/: configure-qtcreator.rst  index.rst  installing-the-sdk.rst  read-system-logs.rst  run-binary-on-target.rst  using-the-sdk-to-crosscompile.rst
docs/articles/templates/: directory-structure.rst  index.rst  source-templates.rst  (+1 more)
docs/categories/: experimental.rst  howto.rst  process.rst
docs/cmake_modules/: FindSphinx.cmake
docs/exts/: taglist.py
(+21 files in other folders)
